<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.salesforce.functions</groupId>
  <artifactId>sf-fx-schema</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <openapi-generator.version>5.4.0</openapi-generator.version>
    <swagger-annotations-version>1.5.22</swagger-annotations-version>
    <jackson-version>2.10.4</jackson-version>
    <jackson-databind-nullable-version>0.2.2</jackson-databind-nullable-version>
    <jakarta-annotation-version>1.3.5</jakarta-annotation-version>
    <junit-version>4.13.1</junit-version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
          <groupId>io.swagger</groupId>
          <artifactId>swagger-annotations</artifactId>
          <version>${swagger-annotations-version}</version>
      </dependency>

      <!-- JSON processing: jackson -->
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
          <version>${jackson-version}</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-annotations</artifactId>
          <version>${jackson-version}</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>${jackson-version}</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.datatype</groupId>
          <artifactId>jackson-datatype-jsr310</artifactId>
          <version>${jackson-version}</version>
      </dependency>
      <dependency>
          <groupId>org.openapitools</groupId>
          <artifactId>jackson-databind-nullable</artifactId>
          <version>${jackson-databind-nullable-version}</version>
      </dependency>

      <!-- @Nullable annotation -->
      <dependency>
          <groupId>com.google.code.findbugs</groupId>
          <artifactId>jsr305</artifactId>
          <version>3.0.2</version>
      </dependency>
      <dependency>
          <groupId>jakarta.annotation</groupId>
          <artifactId>jakarta.annotation-api</artifactId>
          <version>${jakarta-annotation-version}</version>
          <scope>provided</scope>
      </dependency>

      <!-- test dependencies -->
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>${junit-version}</version>
          <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>11</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.openapitools</groupId>
          <artifactId>openapi-generator-maven-plugin</artifactId>
          <version>5.4.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <!-- "codegen" - do the code generation phases based on toplevel schema.json to replace model class sources -->
      <id>codegen</id>
    </profile>
    <profile>
      <!-- "cibuild" - add artifacts suitable for Continuous Integration such as (java)doc and sources jar's -->
      <id>cibuild</id>
    </profile>

    <profile>
      <id>gen-ts</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.openapitools</groupId>
            <artifactId>openapi-generator-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>gen-ts-openapi</id>
                <phase>process-sources</phase>
                <goals>
                  <goal>generate</goal>
                </goals>
                <configuration>
                  <inputSpec>${project.basedir}/schema.json</inputSpec>
                  <output>${gen-tsdir}</output>
                  <generatorName>typescript-node</generatorName>
                  <disallowAdditionalPropertiesIfNotPresent>false</disallowAdditionalPropertiesIfNotPresent>
                  <licenseName>Apache 2.0</licenseName>
                  <npmName>@salesforce/sf-fx-schema-context</npmName>
                  <npmVersion>${project.version}</npmVersion>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <!--<plugin>
            <artifactId>maven-antrun-plugin</artifactId>
            <executions>
              <execution>
                <id>gen-ts-openapi-clean</id>
                <phase>process-sources</phase>
                <goals>
                  <goal>run</goal>
                </goals>
                <configuration>
                  <target>
                    <move todir="${project.basedir}">
                      <fileset dir="${gen-tsdir}"
                          includes="model_*.ts" />
                    </move>
                  </target>
                </configuration>
              </execution>
            </executions>
          </plugin>-->
        </plugins>
      </build>
    </profile>
  </profiles>

  <modules>
    <module>java</module>
    <module>go</module>
    <module>node</module>
  </modules>

</project>
